<resources>
    <string name="app_name">Speed</string>
    <string name="no_candidate">No candidate</string>
    <string name="all">All</string>
    <string name="favorite">Favorite</string>
    <string name="candidate_photo">Candidate photo</string>
    <string name="search">Search</string>
    <string name="add_a_candidate">Add a candidate</string>
    <string name="edit_a_candidate">Edit a candidate</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="email_logo">eMail logo</string>
    <string name="phone_logo">Phone logo</string>
    <string name="person_logo">Person logo</string>
    <string name="date">Date</string>
    <string name="money_logo">Money logo</string>
    <string name="expected_salary">Expected salary</string>
    <string name="note_logo">Note logo</string>
    <string name="note">Note</string>
    <string name="save">Save</string>
    <string name="birthday_logo">Birthday logo</string>
    <string name="impossible_to_selected_a_date_of_birth_in_the_future">Impossible to selected a date of birth in the future</string>
    <string name="mandatory_field">Mandatory field</string>
    <string name="invalid_format">Invalid format</string>
    <string name="select_a_date">Select a date</string>
    <string name="enter_a_date">Enter a date</string>
    <string name="favorites">Favorites</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="no_parameter">No parameter - Impossible to find the candidate</string>
    <string name="delete_confirmation">Are you sure you want to delete this candidate? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="error">Error</string>
    <string name="candidate_photo_details">Candidate photo</string>
    <string name="sms">SMS</string>
    <string name="send_a_sms">Send a SMS</string>
    <string name="call_the_candidate">Call the candidate</string>
    <string name="call">Call</string>
    <string name="send_an_email">Send an email</string>
    <string name="e_mail">E-mail</string>
    <string name="phone_not_found">Phone not found</string>
    <string name="no_sms_application_found">No SMS application found</string>
    <string name="no_application_of_email_found">No application of email found</string>
    <string name="select_email_application">Select an email application</string>
    <string name="about">About</string>
    <string name="birthday">Birthday</string>
    <string name="year">%s (%s years)</string>
    <string name="no_media_selected">No media selected</string>
    <string name="no_photo_picker">Photo picker unavailable</string>
    <string name="jj_mm_aaaa_xx_ans">YYYY/MM/DD (xx years)</string>
    <string name="en_cours_de_conversion">Currently converting…</string>
    <string name="format_date_problem">Format date problem</string>
    <string name="contentDescriptionOfTab">All candidates or favorite candidate</string>
    <string name="tab_showing_all_candidates">Tab showing all candidates</string>
    <string name="tab_showing_favorite_candidates">Tab showing favorite candidates</string>
</resources>