<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.candidate.CandidateEditFragment">


    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent
"       app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/edtResearchColor"
            app:title="A definir"
            app:navigationIcon="@drawable/baseline_arrow_back_24" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/imgPerson"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="70dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/person_logo"
        android:src="@drawable/baseline_people_24"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutFirstName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="@dimen/_heightField"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/first_name"
        app:layout_constraintStart_toEndOf="@+id/imgPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPerson"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutLastName"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="@dimen/_heightField"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="5dp"
        android:hint="@string/last_name"
        app:layout_constraintStart_toEndOf="@+id/imgPerson"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutFirstName"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColorHint="#757575"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/imgPhone"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutLastName"
        android:contentDescription="@string/phone_logo"
        android:src="@drawable/baseline_phone_24"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutPhone"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:textColor="@color/black"
        android:layout_width="0dp"
        android:layout_height="@dimen/_heightField"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/phone"
        app:layout_constraintStart_toEndOf="@+id/imgPhone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgPhone"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imgEmail"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutPhone"
        android:contentDescription="@string/email_logo"
        android:src="@drawable/baseline_mail_24"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/email"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgEmail"

        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <ImageView
        android:id="@+id/imgBirthday"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
        android:contentDescription="@string/birthday_logo"
        android:src="@drawable/baseline_cake_24"/>

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgBirthday"
        android:text="Pick date"/>

    <EditText
        android:id="@+id/edtDateOfBirth"
        android:inputType="date"
        app:boxStrokeColor="@android:color/black"
        app:boxStrokeWidth="2dp"
        android:hint="@string/date"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toEndOf="@+id/imgEmail"
        app:layout_constraintEnd_toStartOf="@+id/btnPickDate"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutEmail"
        />

    <ImageView
        android:id="@+id/imgSalary"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtDateOfBirth"
        android:contentDescription="@string/money_logo"
        android:src="@drawable/baseline_attach_money_24"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutExpectedSalary"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="@dimen/_heightField"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/expected_salary"
        app:layout_constraintStart_toEndOf="@+id/imgSalary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgSalary"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtExpectedSalary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <ImageView
        android:id="@+id/imgNote"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputLayoutExpectedSalary"
        android:contentDescription="@string/note_logo"
        android:src="@drawable/baseline_edit_24"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputLayoutNote"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/note"
        app:layout_constraintStart_toEndOf="@+id/imgNote"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imgNote"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textMultiLine"
            android:gravity="top"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rounded_corner_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>